--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "rimraf dist && npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "rimraf": "^6.0.1",
     "vite": "^6.3.1"
   }
 }
